# rusty-games

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
client/: Cargo.toml  build.rs
client/assets/agents/: hard.weights
client/src/: app_state.rs  commands.rs  common.rs  events.rs  grpc.rs  main.rs  resources.rs  settings.rs  systems.rs
client/src/board/: components.rs  events.rs  mod.rs  systems.rs
client/src/bot/: components.rs  mod.rs  strategy.rs  systems.rs
client/src/game/: common.rs  components.rs  error.rs  events.rs  game_info.rs  mod.rs  pending_action.rs  resources.rs  systems.rs
client/src/game/tic_tac_toe/: components.rs  mod.rs  resources.rs  systems.rs
client/src/game/tic_tac_toe/board/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
client/src/game/tic_tac_toe/bot/: components.rs  mod.rs  resources.rs  systems.rs
client/src/game/tic_tac_toe/menu/: components.rs  events.rs  mod.rs  systems.rs
client/src/game/tic_tac_toe/ui/: components.rs  mod.rs  systems.rs
client/src/grpc/: components.rs  error.rs  events.rs  mod.rs  resources.rs  systems.rs  task_entity.rs
client/src/interface/: buttons.rs  common.rs  components.rs  events.rs  game_list.rs  mod.rs  plugin.rs  resources.rs  systems.rs
client/src/interface/game_list/: components.rs  mod.rs  systems.rs
client/src/interface/ingame/: components.rs  events.rs  mod.rs  systems.rs
client/src/util/: mod.rs  watched_value.rs
proto/: game.proto  game.rs  rpc.proto
server/: Cargo.toml  build.rs
server/examples/: tic_tac_toe.rs
server/proto/: auth_service.proto  chess.proto  common.proto  game.proto  game_service.proto  rpc.proto
server/src/: lib.rs
server/src/core/: encoding.rs  error.rs  grid.rs  mod.rs  player_pool.rs  tic_tac_toe.rs
server/src/core/chess/: game.rs  iterator.rs  mod.rs  turn_data.rs  types.rs
server/src/db/: connection.rs  error.rs  mod.rs  models.rs  schema.rs
server/src/game/: encoding.rs  error.rs  game.rs  grid.rs  mod.rs  player_pool.rs  tic_tac_toe.rs
server/src/game/chess/: game.rs  iterator.rs  mod.rs  turn_data.rs  types.rs
server/src/proto/: mod.rs
server/src/rpc_server/: error.rs  game_storage.rs  lobby.rs  lobby_manager.rs  mod.rs  rpc.rs
server/src/rpc_server/auth/: checks.rs  error.rs  interceptor.rs  mod.rs  oauth.rs  rpc.rs  token.rs  worker.rs
server/src/rpc_server/auth/oauth/: manager.rs  mod.rs  redirect.rs  worker.rs
server/tests/: rpc.rs
src/: lib.rs  main.rs
src/game/: chess.rs  error.rs  game.rs  grid.rs  mod.rs  player_pool.rs  state.rs  tic_tac_toe.rs
src/game/chess/: game.rs  index.rs  turn_data.rs  types.rs
src/rpc_server/: game_proto.rs  game_storage.rs  mod.rs  rpc.rs
tic_tac_toe_ai/: Cargo.toml
tic_tac_toe_ai/src/: lib.rs  main.rs  q_learning.rs
