[package]
name = "mp-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mp-game"
path = "src/main.rs"

[dependencies]
async-stream = "0.3"
prost = "0.12"
thiserror = "1.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = "0.11"
tonic-reflection = "0.11"

[build-dependencies]
tonic-build = "0.11"