[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compat = "0.2.3"
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_simple_text_input = "0.7.0"
game-server = { package = "server", path = "../server" }
prost = "0.12.6"
rand = "0.8.5"
tic-tac-toe-ai = { package = "tic_tac_toe_ai", path = "../tic_tac_toe_ai" }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
