[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
async-compat = "0.2.3"
async-io = "2.3.3"
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy_simple_text_input = "0.9"
game-server = { package = "server", path = "../server" }
prost = "0.13"
rand = "0.8.5"
thiserror = "1.0"
tic-tac-toe-ai = { package = "tic_tac_toe_ai", path = "../tic_tac_toe_ai" }
tonic = "0.12"
tonic-health = "0.12"

[build-dependencies]
tonic-build = "0.12"
