[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
async-compat = "0.2.3"
async-io = "2.3.3"
async-stream = "0.3.6"
bevy = { version = "0.15", features = ["dynamic_linking"] }
bevy_simple_text_input = "0.10"
clap = { version = "4.5", features = ["derive"] }
game-server = { package = "server", path = "../server" }
prost = "0.13"
rand = "0.8.5"
smallvec = { version = "1.13.2", features = ["drain_filter"] }
thiserror = "2.0"
tic-tac-toe-ai = { package = "tic_tac_toe_ai", path = "../tic_tac_toe_ai" }
tonic = "0.12"
tonic-health = "0.12"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
itertools = "0.14.0"
typenum = "1.17.0"
