[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
generic-array = "1"
prost = "0.13"
smallvec = "1.13.2"
thiserror = "1.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
tokio-util = "0.7.11"
tonic = "0.12"
tonic-health = "0.12"
tonic-reflection = "0.12"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
itertools = "0.13.0"
serial_test = "3.1.1"
