[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }
diesel = { version = "2.2", features = ["postgres"] }
dotenv = "0.15"
generic-array = "1"
hex = "0.4"
jsonwebtoken = "9.3"
mockall = "0.13"
oauth2 = { version = "5.0", features = ["timing-resistant-secret-traits"] }
prost = "0.13"
serde = "1"
serde_json = "1"
smallvec = "1.13.2"
thiserror = "2.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
tokio-util = "0.7.11"
tonic = "0.12"
tonic-health = "0.12"
tonic-reflection = "0.12"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
itertools = "0.14.0"
regex = "1.11.1"
serial_test = "3.1.1"
